test/src/e2e_vm_tests/test_programs/should_fail/supertrait_does_not_exist/src/main.sw
script;

trait A {
    fn a();
}

// Trait C does not exist in this scope. This shouldn't compile
trait B: C {
    fn b();
}

fn main() { } 
